2012-03-28  6.7.6-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.6-2, SVN revision 7245.

2012-03-26  6.7.6-2 Anthony Thyssen <A.Thyssen@griffith...>
  * Added "Nearest" as a synonym for "Nearest-Neighbor" iterpolate setting

2012-03-21  6.7.6-2 Glenn Randers-Pehrson <glennrp@image...>
  * coders/png.c: stored "file_gamma" for later use by identify.

2012-03-19  6.7.6-2 Cristy  <quetzlzacatenango@image...>
  * Add full support for Pango markup.
  * Pango namespace is 'pango:', not 'caption:'.
  * Correct for EXR images with broken display windows.

2012-03-18  6.7.6-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.6-1, SVN revision 7145.

2012-03-16  6.7.6-1 Glenn Randers-Pehrson <glennrp@image...>
  * Reduce the scope of quantum_info in the PNG decoder to avoid a possible
    memory leak (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20522).

2012-03-13  6.7.6-1 Cristy  <quetzlzacatenango@image...>
  * Use uint32 pointer for ReadStripMethod in coders/tiff.c (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20526).
  * Ghostscript 32/64 bit detection patch (contributed by
    axeld@pinc-...).
  * Honor center gravity for caption: with Pango support (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20517).
  * Add support for pango: coder to render captions with Pango.

2012-03-10  6.7.6-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.6-0, SVN revision 7090.

2012-03-06  6.7.6-0 Cristy  <quetzlzacatenango@image...>
  * Importing from the X11 root windows no longer leaks memory (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20470).
  * Check to see if delegate file exists before copying.

2012-03-05  6.7.5-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-10, SVN revision 7056.

2012-03-05  6.7.5-10 Cristy  <quetzlzacatenango@image...>
  * Fix too many arguments to AnnotateImage() (copy/paste bug).
